complete adding resize image in history